--- a/src/css/custom-kesh.css
+++ b/src/css/custom-kesh.css
@@ -11,6 +11,7 @@
     height: 100%;
     background-color: rgba(255, 255, 255, 1);
     z-index: 9999;
+    display: none;
 }
 
 .loading-fullscreen {
