--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2138,3 +2138,122 @@ swiper-container.event-listing {
     width: 150px;
     bottom: 12px
 }
+
+/* Post Add */
+
+.swiper-pagination-bullet-active {
+    background-color: #b3905b !important;
+}
+
+.post-add {
+    margin: 0px auto;
+    width: 100%;
+}
+
+.post-add-images {
+    width: 100%;
+    height: 312px;
+    background-color: transparent;
+}
+
+.post-add-images .swiper {
+    overflow: visible;
+    overflow-x: clip;
+}
+
+.post-add-images .swiper-slide {
+    position: relative;
+    height: 280px;
+    text-align: center;
+    background-color: #fff;
+    overflow: hidden;
+    padding-top: 10px;
+}
+
+.post-add-images .swiper-slide .swiper-slide-image {
+    height: 260px;
+    width: auto;
+    min-width: 230px;
+    max-width: 90%;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+}
+
+.post-add-images .swiper-slide .swiper-slide-background {
+    position: absolute;
+    top: 0;
+    left: -5%;
+    height: 110%;
+    width: 110%;
+    object-fit: cover;
+    z-index: 1;
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    opacity: 0.5;
+}
+
+.post-add-images .swiper-pagination {
+    bottom: -25px !important;
+}
+
+.post-add-content .list {
+    margin: 0 !important;
+}
+
+.post-add-content textarea {
+    height: 150px !important;
+}
+
+
+/* Post Add */
+.swipe-handler {
+    height: 50px;
+    position: relative;
+    left: 0;
+    width: 100%;
+    top: 0;
+    background: #fff;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.swipe-handler:after {
+    content: '';
+    width: 36px;
+    height: 6px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 3px;
+    background: #666;
+}
+
+.post-tags .tag-btn {
+    display: block;
+    width: 100%;
+    margin: 5px 0 0 0;
+    border: 2px var(--f7-ios-primary) solid;
+    border-radius: 8px;
+    text-align: center;
+    padding: 6px;
+    font-size: 12px;
+    color: var(--f7-ios-primary);
+    font-weight: bold;
+}
+
+.tag-popup input {
+    border-radius: 5px;
+    border: 1px #dddddd solid;
+    padding: 0 10px !important;
+}
+
+.tag-popup .tag-results {
+    height: 55vh;
+    overflow: auto;
+}
+
+.tag-popup .tag-search {
+    margin-bottom: 5px !important
+}
