--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,6 +25,17 @@ body {
     clear: both;
 }
 
+*:not(input):not(textarea),
+:not(input):not(textarea)::selection {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+}
+
 .link.popup-close i {
     font-size: 16px !important;
 }
@@ -85,7 +96,7 @@ body {
 .image-square {
     display: block;
     width: 100%;
-    padding-bottom: 100%;
+    padding-bottom: 90%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -201,9 +212,14 @@ img.image-square {
     font-size: 50px;
 }
 
+.swiper-pagination-bullet-active {
+    background-color: #b3905b !important;
+}
+
 .Xios .list-strong-ios ul {
     background-color: transparent !important;
 }
+
 
 
 
@@ -425,7 +441,7 @@ img.image-square {
 
 
 
-/* Media Post */
+/* Media Post & Image Carousel */
 
 .media-post {
     margin-bottom: 30px;
@@ -478,29 +494,47 @@ img.image-square {
     position: relative;
 }
 
+
+.media-post .media-post-content .single-image {
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    width: 100%;
+}
+
+.media-post .media-post-content .single-image .media-image {
+    width: 100%;
+    height: auto;
+    max-height: 500px;
+    max-width: 500px;
+    overflow: hidden;
+    object-fit: cover;
+    position: relative;
+    z-index: 2;
+    display: block;
+    margin: 0 auto;
+}
+
+.media-post .media-post-content .single-image .media-image-background {
+    position: absolute;
+    top: 0;
+    left: -5%;
+    height: 110%;
+    width: 110%;
+    object-fit: cover;
+    z-index: 1;
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    opacity: 0.5;
+    display: block;
+}
+
 .media-post .swiper-container {
     height: 100%;
     width: 100%;
     overflow: hidden;
 }
 
-.media-post .swiper-pagination {
-    position: relative;
-    top: -5px;
-}
-
-.media-post .swiper-pagination .swiper-pagination-bullet {
-    width: 6px !important;
-    height: 6px !important;
-    margin: 0 3px !important;
-}
-
-.media-post .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #ae9159;
-    width: 6px !important;
-    height: 6px !important;
-    margin: 0 3px !important;
-}
 
 .media-post .media-post-content img {
     width: 100%;
@@ -538,6 +572,68 @@ img.image-square {
     line-height: 24px;
     font-weight: 600;
 }
+
+.post-view-images {
+    width: 100%;
+    height: 40vh;
+    min-height: 250px;
+    max-height: 600px;
+    background-color: transparent;
+}
+
+.post-view-images .swiper {
+    overflow: visible;
+    overflow-x: clip;
+}
+
+.post-view-images .swiper-slide {
+    position: relative;
+    height: calc(40vh - 32px);
+    min-height: 250px;
+    text-align: center;
+    background-color: #fff;
+    overflow: hidden;
+    padding-top: 10px;
+}
+
+.post-view-images .swiper-slide .swiper-slide-image {
+    height: calc(40vh - 54px);
+    min-height: 250px;
+    width: auto;
+    min-width: 230px;
+    max-width: 90%;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+    object-fit: cover;
+}
+
+.post-view-images .swiper-slide .swiper-slide-background {
+    position: absolute;
+    top: 0;
+    left: -5%;
+    height: 110%;
+    width: 110%;
+    object-fit: cover;
+    object-position: center center;
+    z-index: 1;
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    opacity: 0.5;
+}
+
+.post-view-images .swiper-pagination {
+    bottom: -25px !important;
+}
+
+.post-add-content .list {
+    margin: 0 !important;
+}
+
+.post-add-content textarea {
+    height: 150px !important;
+}
+
 
 .button-grey {
     background-color: #333333;
@@ -1015,21 +1111,21 @@ img.image-square {
 }
 
 /* .profile-grid {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	width: 95%;
-	margin: 0 auto;
-	text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 95%;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .profile-grid .grid-item {
-	display: flex;
-	flex: 1 1 32%;
-	margin: 0 0.5% 1% 0.5%;
-	box-sizing: border-box;
-	overflow: hidden;
-	min-height: 100px;
+    display: flex;
+    flex: 1 1 32%;
+    margin: 0 0.5% 1% 0.5%;
+    box-sizing: border-box;
+    overflow: hidden;
+    min-height: 100px;
 } */
 
 .profile-grid {
@@ -1045,14 +1141,14 @@ img.image-square {
     min-height: 100px;
     box-sizing: border-box;
     overflow: hidden;
-    max-height: 130px;
+    max-height: 2000px;
 }
 
 .profile-grid .video-square {
     display: block;
     overflow: hidden;
     width: 100%;
-    padding-bottom: 100%;
+    padding-bottom: 90%;
     position: relative;
 }
 
@@ -2140,74 +2236,15 @@ swiper-container.event-listing {
     bottom: 12px
 }
 
-/* Post Add */
 
-.swiper-pagination-bullet-active {
-    background-color: #b3905b !important;
-}
+
+/* Post Add */
 
 .post-add {
     margin: 0px auto;
     width: 100%;
 }
 
-.post-add-images {
-    width: 100%;
-    height: 312px;
-    background-color: transparent;
-}
-
-.post-add-images .swiper {
-    overflow: visible;
-    overflow-x: clip;
-}
-
-.post-add-images .swiper-slide {
-    position: relative;
-    height: 280px;
-    text-align: center;
-    background-color: #fff;
-    overflow: hidden;
-    padding-top: 10px;
-}
-
-.post-add-images .swiper-slide .swiper-slide-image {
-    height: 260px;
-    width: auto;
-    min-width: 230px;
-    max-width: 90%;
-    margin: 0 auto;
-    position: relative;
-    z-index: 2;
-}
-
-.post-add-images .swiper-slide .swiper-slide-background {
-    position: absolute;
-    top: 0;
-    left: -5%;
-    height: 110%;
-    width: 110%;
-    object-fit: cover;
-    z-index: 1;
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
-    opacity: 0.5;
-}
-
-.post-add-images .swiper-pagination {
-    bottom: -25px !important;
-}
-
-.post-add-content .list {
-    margin: 0 !important;
-}
-
-.post-add-content textarea {
-    height: 150px !important;
-}
-
-
-/* Post Add */
 .swipe-handler {
     height: 50px;
     position: relative;
