Updated post display

--- a/src/css/custom-kesh.css
+++ b/src/css/custom-kesh.css
@@ -471,9 +471,9 @@
     background-color: #101010;
 }
 
-.swiper-pagination-bullet {
+/* .swiper-pagination-bullet {
     background: #e0e0e0;
-}
+} */
 
 
 .swiper-pagination-bullet.swiper-pagination-bullet-active {
