--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1202,7 +1202,7 @@ img.image-square {
     top: 0px;
     left: 0;
     width: 100%;
-    height: 30vh;
+    height: 25vh;
     min-height: 150px;
     max-height: 500px;
     background-size: cover;
@@ -1210,21 +1210,49 @@ img.image-square {
     background-repeat: no-repeat;
 }
 
-.vehicle-profile-image {
-    width: 60px;
-    height: 60px;
+.vehicle-profile-background:after {
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40%;
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    content: '';
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 99%, rgba(0, 0, 0, 1) 100%);
+}
+
+.vehicle-profile-owner {
+    position: absolute;
+    bottom: 12px;
+    left: 15px;
+    z-index: 20;
+}
+
+.vehicle-profile-owner .vehicle-profile-image {
+    width: 40px;
+    height: 40px;
     border-radius: 100px;
-    border: 2px #fff solid;
-    margin: 0;
+    border: 1.5px #fff solid;
+    margin: 0 8px 0 0;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
+    float: left;
+}
+
+.vehicle-profile-owner .vehicle-profile-username {
+    float: left;
+    color: #fff;
+    font-size: 12px;
+}
+
+.vehicle-profile-owner .vehicle-profile-username div {
+    display: block;
+    width: 100%;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 .profile-garage-intro {
@@ -1240,19 +1268,127 @@ img.image-square {
 .profile-garage-intro p {
     font-size: 12px;
     line-height: 18px;
-    margin: 0 auto 15px auto;
 }
 
-.profile-garage-intro p {
-    font-size: 12px;
-    line-height: 20px;
-}
+
 
 .profile-garage-intro p.garage-owned-information {
-    margin-bottom: 10px;
+    margin: 2px auto 5px auto;
 }
 
 
+.profile-garage-stats {
+    display: block;
+    width: 100%;
+    margin: 25px auto 25px auto;
+}
+
+.profile-garage-stats .profile-garage-stat {
+    width: 25%;
+    text-align: center;
+    border-left: 1px #e1e1e1 solid;
+    display: inline-block;
+}
+
+.profile-garage-stats .profile-garage-stat:nth-of-type(1) {
+    border-left: 0 !important;
+}
+
+.profile-garage-stats .profile-garage-stat h3 {
+    font-weight: bold;
+    margin: 0 0 3px 0;
+    font-size: 18px;
+}
+
+.profile-garage-stats .profile-garage-stat h3 span {
+    font-size: 9px;
+}
+
+.profile-garage-stats .profile-garage-stat h5 {
+    color: #808080;
+    font-weight: 400;
+    margin: 0;
+    font-size: 12px;
+}
+
+.modification-container {
+    width: 90%;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.modification-container .modification-header {
+    background-color: #f0f0f0;
+    padding: 8px 14px;
+    border-radius: 10px;
+    font-size: 12px;
+}
+
+.modification-container .modification-header .modification-header-title {
+    float: left;
+    width: 80%;
+    font-weight: bold;
+}
+
+.modification-container .modification-header .modification-header-count {
+    float: right;
+    width: 20%;
+    text-align: right;
+    font-style: italic;
+}
+
+.modification-container .modification-item {
+    display: block;
+    width: 100%;
+    margin: 10px auto 25px auto;
+    padding: 10px;
+    border-bottom: 1px solid #E1E1E1;
+}
+
+.modification-container .modification-item .modification-content {
+    width: calc(100% - 80px);
+    float: left;
+}
+
+.modification-container .modification-item .modification-title {
+    font-size: 15px;
+    font-weight: bold;
+    margin: 0 0 5px 0;
+    display: block;
+    width: 100%;
+}
+
+.modification-container .modification-item .modification-content .modification-desc {
+    font-size: 12px !important;
+}
+
+.modification-container .modification-item .modification-content .modification-content-link {
+    display: block;
+    width: 100%;
+    margin: 10px 0 0 0;
+    font-size: 12px !important;
+}
+
+.modification-container .modification-item .modification-content-link .icon {
+    font-size: 13px !important;
+}
+
+.modification-container .modification-item .modification-image {
+    width: 60px;
+    height: 60px;
+    background-color: #a6a6a6;
+    float: right;
+    margin: 3px 0 0 0;
+}
+
+.modification-image a {
+    width: 60px;
+    height: 60px;
+    display: block;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
 
 
