Updated profile links and clear input button

--- a/src/css/custom-kesh.css
+++ b/src/css/custom-kesh.css
@@ -672,3 +672,9 @@
     display: none;
     pointer-events: none;
 }
+
+.input-clear-button::before,
+.input-clear-button::after {
+    pointer-events: none;
+    /* Ensures pseudo-elements don't capture clicks */
+}
