Updated event/venue cards

--- a/src/css/custom-kesh.css
+++ b/src/css/custom-kesh.css
@@ -678,3 +678,7 @@
     pointer-events: none;
     /* Ensures pseudo-elements don't capture clicks */
 }
+
+.word-wrap {
+    word-wrap: break-word;
+}
