--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1870,6 +1870,64 @@ img.image-square {
     padding-inline: 1rem;
 }
 
+.Xevent-venue-listings {
+    width: 100%;
+    height: calc(100vh - 300px - var(--f7-navbar-height) - var(--f7-toolbar-height));
+    overflow: auto;
+}
+
+.event-venue-listings .card-row {
+    display: block;
+    width: 100%;
+    padding: 15px 0;
+    border-bottom: 1px solid #E1E1E1;
+}
+
+.event-venue-listings .card-row .card-row-image {
+    float: left;
+    width: 30%;
+}
+
+.event-venue-listings .card-row .card-row-content {
+    float: left;
+    width: 65%;
+    margin: 0 0 0 5%;
+}
+
+.event-venue-listings .card-row .card-row-content h3 {
+    margin-bottom: 5px;
+    margin-top: 0px;
+    font-size: 15px;
+    color: #000;
+    line-height: 18px;
+    font-weight: 500;
+}
+
+.event-venue-listings .card-row .card-row-content .event-date {
+    margin-bottom: 0px;
+    margin-top: 0px;
+    font-size: 12px;
+    color: var(--f7-ios-primary);
+    font-weight: 700;
+}
+
+.event-venue-listings .card-row .card-row-content .event-info {
+    margin-bottom: 0px;
+    margin-top: 7px;
+    font-size: 11px;
+    color: #9c9c9c;
+    font-weight: 500;
+}
+
+.event-listing .card-row {}
+
+.event-listing .card-row {}
+
+.event-listing .card-row {}
+
+
+
+
 .event-listing .card {
     background: #ffffff;
     border-radius: 6px;
