--- a/src/css/custom-kesh.css
+++ b/src/css/custom-kesh.css
@@ -283,7 +283,8 @@
     width: 70%;
 }
 
-.notification-count {
+.notification-count,
+.cart-count {
     position: absolute;
     font-size: 12px;
     background-color: var(--f7-ios-primary);
@@ -681,4 +682,92 @@
 
 .word-wrap {
     word-wrap: break-word;
+}
+
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.product-card {
+    background-color: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.product-card img {
+    width: 100%;
+    height: auto;
+}
+
+.product-info {
+    padding: 16px;
+}
+
+.product-info h3 {
+    font-size: 1.2rem;
+    margin-bottom: 8px;
+}
+
+.product-price {
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 16px;
+}
+
+@media (max-width: 768px) {
+    .product-card {
+        margin-bottom: 20px;
+    }
+}
+
+.saved-payment-methods {
+    margin: 20px 0;
+}
+
+.payment-method {
+    border: 1px solid #ddd;
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.payment-method-card p {
+    margin: 0;
+    padding: 5px 0;
+}
+
+.actions {
+    margin-top: 10px;
+}
+
+.actions button {
+    margin-right: 10px;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.actions button:hover {
+    background-color: #007bff;
+    color: white;
+}
+
+.actions .use-method {
+    background-color: #28a745;
+    color: white;
+}
+
+.actions .remove-method {
+    background-color: #dc3545;
+    color: white;
+}
+
+#addPaymentMethodForm {
+    margin-block: 2rem;
 }
